--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "config": "^3.1.0",
+    "config": "^3.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.6.4",
+    "mongoose": "^5.6.5",
     "shortid": "^2.2.14",
     "valid-url": "^1.0.9"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "eslint": "^6.0.1"
   }
 }
