--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "start": "node index",
-    "dev": "nodemon index"
+    "dev": "nodemon index",
+    "test": "mocha --recursive tests"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "config": "^3.2.0",
     "express": "^4.17.1",
@@ -18,7 +19,9 @@
     "valid-url": "^1.0.9"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1",
-    "eslint": "^6.0.1"
+    "chai": "^4.2.0",
+    "eslint": "^6.0.1",
+    "mocha": "^6.2.0",
+    "nodemon": "^1.19.1"
   }
 }
