--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index",
     "dev": "nodemon index",
-    "test": "mocha --recursive tests"
+    "test": "nyc --reporter=clover mocha --recursive tests"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +22,7 @@
     "chai": "^4.2.0",
     "eslint": "^6.0.1",
     "mocha": "^6.2.0",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "nyc": "^14.1.1"
   }
 }
